BUG: Fixed right margin on list views - was causing the results list view to touch the simple search bar. Improves alignment with the pager in other areas such as Manage Users.
git-svn-id: http://svn.montala.net/svn/resourcespace@5125 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -178,7 +178,7 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 .DESC {display: inline;padding-right: 10px;}
 
 /*Resource Panel layout*/
-.Listview {	margin: 25px 0 25px 0;}
+.Listview {	margin: 25px 10px 25px 0;}
 .Listview table{ width:100%;}
 .Listview td {padding: 5px 5px 5px 5px;}
 .ListTools {text-align: right;}
